--- a/ansible/deploy_flask_app.yml
+++ b/ansible/deploy_flask_app.yml
@@ -6,18 +6,18 @@
     - name: Copy Docker image to remote
       copy:
         src: ./flask-app.tar
-        dest: /tmp/myapp.tar  # It's fine to rename it on the remote if desired
+        dest: /tmp/flask-app.tar
 
     - name: Load Docker image on remote
-      command: docker load -i /tmp/myapp.tar
+      command: docker load -i /tmp/flask-app.tar
 
     - name: Stop existing container (if running)
       ignore_errors: true
-      command: docker stop myapp
+      command: docker stop flask-app
 
     - name: Remove old container (if exists)
       ignore_errors: true
-      command: docker rm myapp
+      command: docker rm flask-app
 
     - name: Run new Docker container
-      command: docker run -d --name myapp -p 80:80 myapp:latest
+      command: docker run -d --name flask-app -p 80:80 flask-app:latest
